Bug 480098 - Double middle clicking tabs duplicates them
Summary: Double middle clicking tabs duplicates them
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 24.01.90
Platform: NixOS Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-20 15:11 UTC by markusscully+kde
Modified: 2024-01-21 08:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description markusscully+kde 2024-01-20 15:11:36 UTC
SUMMARY
When rapidly middle clicking tabs to close them, the middle clicks register as a double click and the closed tab is duplicated before being closed.

STEPS TO REPRODUCE
1. Open two or more tabs
2. Rapidly middle click the leftmost tab twice

OBSERVED RESULT
The second middle click duplicates the tab in addition to closing it, leaving behind an extra tab.

EXPECTED RESULT
The tabs is just closed without duplication.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: NixOS unstable
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.12
Comment 1 fanzhuyifan 2024-01-20 17:18:30 UTC
Can reproduce on master
Comment 2 Bug Janitor Service 2024-01-20 18:17:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/702
Comment 3 fanzhuyifan 2024-01-21 08:32:11 UTC
Git commit acc5e739ce540768c611940af936602693513f18 by Yifan Zhu.
Committed on 21/01/2024 at 09:18.
Pushed by fanzhuyifan into branch 'master'.

dolphintabbar: only open tab on double left click

A new tab should be opened only if the double click comes from the left
button.
FIXED-IN: 24.02

M  +9    -7    src/dolphintabbar.cpp

https://invent.kde.org/system/dolphin/-/commit/acc5e739ce540768c611940af936602693513f18
Comment 4 fanzhuyifan 2024-01-21 08:48:05 UTC
Git commit 024bc4d3395cc15cc37cacacb8d5ddf186805d59 by Yifan Zhu.
Committed on 21/01/2024 at 09:32.
Pushed by fanzhuyifan into branch 'release/24.02'.

dolphintabbar: only open tab on double left click

A new tab should be opened only if the double click comes from the left
button.
FIXED-IN: 24.02


(cherry picked from commit acc5e739ce540768c611940af936602693513f18)

M  +9    -7    src/dolphintabbar.cpp

https://invent.kde.org/system/dolphin/-/commit/024bc4d3395cc15cc37cacacb8d5ddf186805d59