dolphintabbar: only open tab on double left click

A new tab should be opened only if the double click comes from the left
button.

BUG: 480098
FIXED-IN: 24.02


(cherry picked from commit acc5e739ce540768c611940af936602693513f18)